--- a/style.css
+++ b/style.css
@@ -636,6 +636,12 @@ h3 {
   color: #FFFFFF;
 }
 
+.vertical {
+  width: 1px;
+  margin: 15px 0;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+}
+
 .footer {
   width: 100%;
   padding: 60px 8px;
@@ -707,15 +713,28 @@ h3 {
   gap: 12px;
 }
 
-.social_media img {
+.social_media i {
+  width: 40px;
+  height: 40px;
   cursor: url(./img/cursor.png), pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  padding: 8px;
+  color: #181C29;
 }
 
-.social_media img:active {
+.social_media i:hover {
+  color: #FF4646;
+}
+
+.social_media i:active {
   box-sizing: border-box;
   border: 1px dashed rgb(6, 164, 79);
   border-radius: 4px;
   background: rgba(6, 164, 79, 0.1);
+  color: #181C29;
 }
 
 .author {
@@ -808,14 +827,12 @@ h3 {
 }
 
 #inactive, #non-active {
-  background-color: #FFFFFF;
   cursor: default;
   border: none;
   color: #181C29;
 };
 
 /* Adaptive */
-
 @media (max-width: 1440px) {
   .__container {
     width: 1276px;
@@ -1046,6 +1063,9 @@ h3 {
 }
 
 .popup {
+  display: flex;
+  justify-content:center;
+  align-items: center;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -1063,23 +1083,28 @@ h3 {
 }
 
 .close_modal {
-  /* width: 40px;
-  height: 40px; */
   display: flex;
   position: absolute;
-  top: 20px;
-  right: 10px;
+  top: 22px;
+  right: 12px;
   cursor: url(./img/cursor.png), pointer;
 }
 
+.close_modal li:active {
+  box-sizing: border-box;
+  border: 1px dashed #06a44f;
+  border-radius: 4px;
+  background: #06A44F1A;
+  border-radius: 10%;
+} 
+
 .close_modal span {
   width: 20px;
-  position: absolute;
   border: 1px solid rgb(24, 28, 41); 
 }
 
 .close_modal span:first-child {
-  left: 20px;
+  position: absolute;
   rotate: -45deg;
 }
 
